# krypton

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN.amber.md  DESIGN.binance.md  DESIGN.md  DESIGN.nasa.md  Makefile  PRODUCT.md  README.md  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: 01-introduction.md  02-functional-requirements.md  03-non-functional-requirements.md  04-architecture.md  05-data-flow.md  06-configuration.md  07-milestones.md  08-open-questions.md  09-glossary.md  10-theme-specification.md  100-agent-bash-approval.md  101-agent-check-command.md  102-webview-windows.md  103-acp-harness-transcript-window.md  104-chrome-signal-upgrades.md  105-view-protocol.md  106-inter-lane-messaging.md  107-acp-harness-transcript-readability.md  108-overall-ui-improvements.md  109-acp-contextual-lane-peek.md  11-selection-mode.md  110-context-aware-command-palette.md  111-harness-right-rail.md  112-acp-review-lane-mode.md  113-acp-cursor-lane.md  113-brainstorm-lane-mode.md  114-acp-harness-streaming-perf.md  115-mention-fanout.md  116-soft-awaiting-peer.md  117-streaming-markdown.md  118-acp-peer-activity-ui.md  119-acp-junie-lane.md  12-hint-mode.md  120-harness-inter-lane-ux.md  121-workspace-status-bar.md  122-acp-omp-lane.md  123-acp-provider-error-rendering.md  124-acp-harness-directive-management.md  125-lane-rail-disambiguation.md  126-acp-lane-model-selection.md  (+169 more)
extension/: .gitignore  README.md  actions.js  background.js  content-extract.src.js  github-issue.css  github-issue.js  manifest.json  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: artifact-scaffold.html
src-tauri/src/: acp.rs  acp_harness_config.rs  commands.rs  config.rs  control.rs  git.rs  hook_server.rs  hurl.rs  lib.rs  music.rs  native_host.rs  pencil.rs  process_metrics.rs  pty.rs  quick_search.rs  session.rs  sound.rs  ssh.rs  termctrl_monitor.rs  theme.rs  usage.rs  webview.rs  webview_bridge.js
src-tauri/src/util/: emit.rs  fs_err.rs  lock.rs  mod.rs
src-tauri/themes/: krypton-dark.toml  legacy-radiance.toml
(+246 files in other folders)
