[package]
name = "app"
version = "0.1.0"
description = "Krypton — a modern terminal emulator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
portable-pty = "0.8"
toml = "0.8"
dirs = "6"
open = "5"
libc = "0.2"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
netstat2 = "0.11"
rusqlite = { version = "0.35", features = ["bundled"] }
rodio = { version = "0.20", default-features = false, features = ["wav", "mp3"] }
rustfft = "6"
hostname = "0.4"
ignore = "0.4"
base64 = "0.22"
tauri-plugin-global-shortcut = "2"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync"] }
tower-http = { version = "0.6", features = ["cors"] }
